automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -244,10 +244,10 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f24a76bc2e8>"
+       "<folium.map.Marker at 0x7f24a767cac8>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
