--- a/index.ipynb
+++ b/index.ipynb
@@ -439,22 +439,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f24a76c1e80>"
+       "<folium.map.Marker at 0x7f24a7689c88>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neighborhood_markers.pop()"
+    "neighborhood_markers.pop(5)"
    ]
   },
   {
